[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/Images/ElectroPanel.png" type="Texture" id=1]
[ext_resource path="res://Asset/Images/ElectroOff.png" type="Texture" id=2]
[ext_resource path="res://Asset/Images/ElectroOn.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Electro.gd" type="Script" id=4]
[ext_resource path="res://Asset/Sound/electroSwitch.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 7 )

[node name="Electro" type="Node2D"]
script = ExtResource( 4 )

[node name="ElectroPanel" type="Sprite" parent="."]
position = Vector2( 145, 664 )
scale = Vector2( 2.045, 2.07 )
texture = ExtResource( 1 )

[node name="Blue" type="Node2D" parent="."]

[node name="ElectroOn" type="Sprite" parent="Blue"]
position = Vector2( 54, 470 )
scale = Vector2( 0.49375, 0.662502 )
texture = ExtResource( 3 )

[node name="ElectroOff" type="Sprite" parent="Blue"]
position = Vector2( 54, 470.25 )
scale = Vector2( 0.5, 0.674996 )
texture = ExtResource( 2 )

[node name="BlueArea" type="Area2D" parent="Blue"]
z_index = 99

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue/BlueArea"]
position = Vector2( 54, 470 )
shape = SubResource( 1 )

[node name="Orange" type="Node2D" parent="."]

[node name="ElectroOn" type="Sprite" parent="Orange"]
position = Vector2( 114, 471 )
scale = Vector2( 0.5, 0.700001 )
texture = ExtResource( 3 )

[node name="ElectroOff" type="Sprite" parent="Orange"]
position = Vector2( 114, 471 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 2 )

[node name="OrangeArea" type="Area2D" parent="Orange"]
z_index = 99

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange/OrangeArea"]
position = Vector2( 114, 471 )
shape = SubResource( 1 )

[node name="Purple" type="Node2D" parent="."]

[node name="ElectroOn" type="Sprite" parent="Purple"]
position = Vector2( 175, 471 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 3 )

[node name="ElectroOff" type="Sprite" parent="Purple"]
position = Vector2( 175, 471 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 2 )

[node name="PurpleArea" type="Area2D" parent="Purple"]
z_index = 99

[node name="CollisionShape2D" type="CollisionShape2D" parent="Purple/PurpleArea"]
position = Vector2( 175, 471 )
shape = SubResource( 1 )

[node name="Green" type="Node2D" parent="."]

[node name="ElectroOn" type="Sprite" parent="Green"]
position = Vector2( 233, 471 )
scale = Vector2( 0.500001, 0.699999 )
texture = ExtResource( 3 )

[node name="ElectroOff" type="Sprite" parent="Green"]
position = Vector2( 233, 471 )
scale = Vector2( 0.499999, 0.7 )
texture = ExtResource( 2 )

[node name="GreenArea" type="Area2D" parent="Green"]
z_index = 99

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green/GreenArea"]
position = Vector2( 233, 471 )
shape = SubResource( 1 )

[node name="ElectroSwitchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="input_event" from="Blue/BlueArea" to="." method="_on_BlueArea_input_event"]
[connection signal="input_event" from="Orange/OrangeArea" to="." method="_on_OrangeArea_input_event"]
[connection signal="input_event" from="Purple/PurpleArea" to="." method="_on_PurpleArea_input_event"]
[connection signal="input_event" from="Green/GreenArea" to="." method="_on_GreenArea_input_event"]
